objects/SaleEntity__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_List_Count__c</fullName>
        <formula>Opportunity__r.Annual_List_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual List Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Opportunity__r.ChargentSFA__Balance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <formula>Entity__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <formula>Opportunity__r.Renewal_Effective_Date__c</formula>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity__r.Renewal_End_Date__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Fulfill__c</fullName>
        <description>Business days between the First Transaction of the sale and the Organizational Date of the sale entity.</description>
        <formula>IF(
ISBLANK(Opportunity__r.First_Transaction__c), NULL,
TEXT(

((5 * ( FLOOR( ( BLANKVALUE( Organizational_Date__c , TODAY()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( BLANKVALUE(Organizational_Date__c , TODAY()) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(Opportunity__r.First_Transaction__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Opportunity__r.First_Transaction__c) - DATE( 1900, 1, 8), 7 ) ) )
)
)
)</formula>
        <label>Days to Fulfill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Entity__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_SLA__c</fullName>
        <formula>TEXT(Entity__r.SLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>Entity__r.RecordType.Name</formula>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Sale Entities</relationshipLabel>
        <relationshipName>Sale_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date__c</fullName>
        <formula>Entity__r.Federal_Return__c</formula>
        <label>Federal Return Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Fees_Paid__c</fullName>
        <formula>Entity__r.Filing_Fees_Paid__c</formula>
        <label>Filing Fees Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Entity__r.Primary_Client__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Year__c</fullName>
        <formula>Entity__r.First_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Partner__c</fullName>
        <formula>Entity__r.General_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Entity__r.Primary_Client__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Transaction__c</fullName>
        <formula>DATEVALUE(Opportunity__r.Last_Transaction__c)</formula>
        <label>Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Limited_Partner_1__c</fullName>
        <formula>Entity__r.Limited_Partner_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limited Partner 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Partner_2__c</fullName>
        <formula>Entity__r.Limited_Partner_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limited Partner 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Partner_3__c</fullName>
        <formula>Entity__r.Limited_Partner_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limited Partner 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_1__c</fullName>
        <formula>Entity__r.Manager_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_2__c</fullName>
        <formula>Entity__r.Manager_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_3__c</fullName>
        <formula>Entity__r.Manager_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Entity__c</fullName>
        <formula>Entity__r.Managing_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_1__c</fullName>
        <formula>Entity__r.Member_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_2__c</fullName>
        <formula>Entity__r.Member_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_3__c</fullName>
        <formula>Entity__r.Member_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Contact_Pension__c</fullName>
        <formula>Entity__r.FU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Contact Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Entity__c</fullName>
        <formula>Opportunity__r.Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sale Entities</relationshipLabel>
        <relationshipName>Sale_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organizational_Date__c</fullName>
        <formula>Entity__r.Organizational_Date__c</formula>
        <label>Organizational Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organizational_State__c</fullName>
        <formula>text(Entity__r.Organization_State__c)</formula>
        <label>Organizational State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Sale_Entity__c</fullName>
        <formula>TEXT(Entity__r.Origin__c)</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_No_Contact__c</fullName>
        <formula>Entity__r.FU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pension No Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Entity__r.Primary_Client__r.PhoneText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Adoption_Date__c</fullName>
        <formula>Entity__r.Plan_Adoption_Date__c</formula>
        <label>Plan Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Sponsor__c</fullName>
        <formula>Entity__r.Plan_Sponsor_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>TEXT(Entity__r.PlanType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <formula>Entity__r.President__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>President</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recap_End_Date__c</fullName>
        <formula>Entity__r.Recap_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recap End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recap_Start_Date__c</fullName>
        <formula>Entity__r.Recap_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recap Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registered_Agent_Name__c</fullName>
        <formula>Entity__r.Registered_Agent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Agent__c</fullName>
        <formula>Opportunity__r.Registered_Agent__c</formula>
        <label>Registered Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_State__c</fullName>
        <formula>TEXT(Opportunity__r.Renewal_State__c)</formula>
        <label>Renewal State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOS_Number__c</fullName>
        <formula>Entity__r.SOS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <label>Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secretary__c</fullName>
        <formula>Entity__r.Secretary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secretary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Opportunity__r.Status__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <formula>Text(Entity__r.Structure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Form__c</fullName>
        <formula>TEXT(Entity__r.Tax_Form__c)</formula>
        <label>Tax Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <formula>text(Entity__r.Tax_Status__c)</formula>
        <label>Tax Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texas_Tax_Payer_ID_Number__c</fullName>
        <formula>Entity__r.Texas_Tax_Payer_ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texas Tax Payer ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texas_Webfile_Number__c</fullName>
        <formula>Entity__r.Texas_Webfile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texas Webfile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texas_Worksheet_URL__c</fullName>
        <formula>Entity__r.Texas_Franchise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texas Worksheet URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treasurer__c</fullName>
        <formula>Entity__r.Treasurer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasurer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trust</label>
        <referenceTo>Trust__c</referenceTo>
        <relationshipLabel>Sale Entities</relationshipLabel>
        <relationshipName>Sale_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name__c</fullName>
        <formula>Entity__r.Trustee_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trustee First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name__c</fullName>
        <formula>Entity__r.Trustee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trustee Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone_Number__c</fullName>
        <formula>Entity__r.Trustee_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trustee Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charitable Remainder Trust</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Deed</fullName>
                </value>
                <value>
                    <fullName>Irrevocable Life Insurance Trust</fullName>
                </value>
                <value>
                    <fullName>Land Trust</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company (LLC)</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership (LP)</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Nominee Other</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Entity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pension Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unlimited_LLC__c</fullName>
        <formula>IF(Opportunity__r.LLC_UNL__c&gt;0, TRUE, FALSE)</formula>
        <label>Unlimited LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VC__c</fullName>
        <formula>Entity__r.VC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vice_President__c</fullName>
        <formula>Entity__r.Vice_President__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vice President</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5500_Due_Date__c</fullName>
        <formula>Entity__r.X5500_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5500 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_End_Month__c</fullName>
        <formula>Entity__r.Year_End_Month__c</formula>
        <label>Year End Month</label>
        <type>Text</type>
    </fields>
    <label>Sale Entity</label>
    <nameField>
        <label>Sale Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>